--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -12,28 +11,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HelthApp"
         tools:targetApi="31">
-        <activity
-            android:name=".signupActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <!-- Set Login Activity as the Launcher -->
+        <!-- FIX: Removed duplicate MAIN launcher from SignupActivity -->
+        <activity android:name=".SignupActivity"
+            android:exported="true" />
+
+        <!-- Set LogActivity as the Launcher -->
         <activity
             android:name=".LogActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" />
+
+        <activity android:name=".MainActivity" android:exported="true" />
+
     </application>
 
 </manifest>
